# vtw-ai-assistant-and-ocr

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  sidebar.py  style.py
.streamlit/: config.toml
clipboard/frontend/: main.js  style.css
crawling/: summary.py
ocr/: easyocr.py
pages/: account.py  chat.py  crawling.py  document_ocr.py  ocr.py
rag/: 01.rag_word.ipynb  02.rag_pdf.ipynb  02.rag_pdf_with_openai.ipynb  03.cache.ipynb  03.rag_with_langgraph.ipynb  04.rag_pdf_with_openai.ipynb  04.rag_pdf_with_sementic_chunk.ipynb  04.rag_pdf_with_upstage.ipynb  04.rag_with_langgraph_core.ipynb  05.rag_cache.ipynb  cache.ipynb  config.py  generate.py  generate_langgraph_chat.py  llm.py  prompt.py  rag.ipynb  rag_prompt.py
rag/cache/: text-embedding-3-large01981830-2530-5572-bce5-cabcc6a8c9ac  text-embedding-3-large058e5a4a-6a3f-5698-9bad-78ff3765e6e7  text-embedding-3-large072f2aff-f397-5ad7-9c87-703278d6fb85  text-embedding-3-large075b9246-4fb6-584a-93f6-4b3d6ec86d13  text-embedding-3-large08dff520-a698-542e-b2e7-60f35e762300  text-embedding-3-large0a2b694e-047f-5f89-9c83-e4aa5db397ff  text-embedding-3-large1364b986-de3a-51c2-b7b4-694a853817bb  text-embedding-3-large1a1143e2-0458-5e1b-8529-03f200d5a869  text-embedding-3-large1e6ac1fa-b39e-5835-aba6-1521af9a9e72  text-embedding-3-large208b8a35-f091-5e2c-84f3-91614dc67aac  text-embedding-3-large255fea09-040a-53e5-90fd-ea49e37057a4  text-embedding-3-large25a3e372-cd66-5e81-af95-1ac070272700  text-embedding-3-large296cfbc1-eedc-58a9-b831-d33170f9433c  text-embedding-3-large2c31f47b-1bcf-5e2a-b11d-383130064a6e  text-embedding-3-large2da78798-3ab4-5b26-8dd0-e7d360288306  text-embedding-3-large2f509f07-5f33-58c6-a8f8-c77adeac761c  text-embedding-3-large3036fcaa-7eee-555e-a8bf-cfe4aaefa953  text-embedding-3-large31378504-5977-598b-a6ae-87799850a46a  (+108 more)
rag/history/: generate.py
(+11 files in other folders)
