[tool.poetry]
name = "vtw-ai-assistant-and-ocr"
version = "0.1.0"
description = "vtw ai assistant"
authors = ["closeup1202 <closeup1202@gmail.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"
easyocr = "^1.7.1"
langchain-upstage = "^0.1.8"
langchain-community = "^0.2.14"
langchain-pinecone = "^0.1.3"
langchain-text-splitters = "^0.2.2"
python-docx = "^1.1.2"
pyperclip = "^1.9.0"
protobuf = "5.27.0"
semantic-chunkers = "^0.0.9"
crawl4ai = {extras = ["all"], version = "^0.3.6"}
googletrans-py = "^4.0.0"
langgraph = ">0.2.27"
opencv-python = "^4.10.0.84"
fsspec = "2024.3.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
